@@ -1,6 +1,7 @@
 Development Portal (2020-02-28 shi)
 ==============================
 Display indicator document-link
+Move activity status close to dates
 
 
 Development Portal (2020-02-11 shi)
